2012-12-07: CME changed as.rspec to work if user provides a 'whichwl' argument