@@ -1,1 +1,3 @@
-2012-12-07: CME changed as.rspec to work if user provides a 'whichwl' argument
+2012-12-07:
+    CME - changed as.rspec to work if user provides a 'whichwl' argument
+    CME - changed procspec to work with single reflectance spectrum
